--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             <i class="fas fa-envelope"></i>
                             <span>Email Me</span>
                         </a>
-                        <a href="#" class="contact-button resume-button" id="download-resume">
+                        <a href="assets/resume.pdf" class="contact-button resume-button" id="download-resume" download="resume.pdf">
                             <i class="fas fa-file-alt"></i>
                             <span>Download Resume</span>
                         </a>
